--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <div id="info">ROHAN</div>
     <div id="subtitle">software engineer.</div>
+    <button class="menu-button" onclick="openMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
 </body>
