--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,8 @@
             </div>
         </div>
     </div>
-    <button class="close-button" onclick="window.close()">×</button>
+    <div id="fade-overlay"></div>
+    <button class="close-button">×</button>
     <script src="menu-script.js"></script>
 </body>
 </html>
