--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="index.html" class="home-button">
+        <span>R</span>
+    </a>
     <div id="info">ROHAN</div>
     <div id="subtitle">software engineer.</div>
     <button class="menu-button" onclick="openMenu()">
