--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     </a>
     <div id="info">ROHAN</div>
     <div id="subtitle">software engineer.</div>
-    <button class="menu-button" onclick="openMenu()">
+    <button class="menu-button">Menu</button>
         <span></span>
         <span></span>
         <span></span>
     </button>
+    <div id="page-transition-overlay"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
 </body>
