--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     </a>
     <div id="info">ROHAN</div>
     <div id="subtitle">software engineer.</div>
-    <button class="menu-button">Menu</button>
-        <span></span>
-        <span></span>
-        <span></span>
+    <button class="menu-button">
+        <span>Menu</span>
+        <div class="menu-button-background"></div>
     </button>
     <div id="page-transition-overlay"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
