--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="index.html" class="home-button">
-        <span>R.</span>
+        <span>R</span>
     </a>
     <div id="info">ROHAN</div>
     <div id="subtitle">software engineer.</div>
