--- a/projects.html
+++ b/projects.html
@@ -7,31 +7,31 @@
     <link rel="stylesheet" href="projects-style.css">
 </head>
 <body>
-    <div>
-        <a href="index.html" class="circular-button home-button">R</a>
-        <a href="menu.html" class="circular-button menu-button">Menu</a>
-    </div>
+    <header>
+        <a href="index.html" class="circular-button home-button"></a>
+        <a href="menu.html" class="circular-button menu-button"></a>
+    </header>
 
     <div class="projects-container" role="main">
         <div class="content-wrapper">
             <div class="technologies-list">
                 <h2>TECHNOLOGIES</h2>
-                <ul id="tech-filter">
-                    <li><button class="tech-btn" data-tech="all">All</button></li>
-                    <li><button class="tech-btn" data-tech="CSS">CSS</button></li>
-                    <li><button class="tech-btn" data-tech="Express.js">Express.js</button></li>
-                    <li><button class="tech-btn" data-tech="Gatsby">Gatsby</button></li>
-                    <li><button class="tech-btn" data-tech="JavaScript">JavaScript</button></li>
-                    <li><button class="tech-btn" data-tech="Next.js">Next.js</button></li>
-                    <li><button class="tech-btn" data-tech="Three.js">Three.js</button></li>
-                    <li><button class="tech-btn" data-tech="VectorDB">VectorDB</button></li>
-                    <li><button class="tech-btn" data-tech="WebGL">WebGL</button></li>
+                <ul>
+                    <li><button class="tech-btn">All</button></li>
+                    <li><button class="tech-btn">CSS</button></li>
+                    <li><button class="tech-btn">Express.js</button></li>
+                    <li><button class="tech-btn">Gatsby</button></li>
+                    <li><button class="tech-btn">JavaScript</button></li>
+                    <li><button class="tech-btn">Next.js</button></li>
+                    <li><button class="tech-btn">Three.js</button></li>
+                    <li><button class="tech-btn">VectorDB</button></li>
+                    <li><button class="tech-btn">WebGL</button></li>
                 </ul>
             </div>
 
             <div class="project-section">
                 <div class="project-header">
-                    <h1>PERSONAL EXPERIMENTS</h1>
+                    <h1>Projects</h1>
                     <p class="subtitle">My adventure with different technologies to discover new patterns.</p>
                 </div>
 
@@ -49,16 +49,16 @@
                         </div>
                     </div>
 
-                    <div class="project" data-techs="Next.js Express.js VectorDB">
-                        <h3>Scorelab AI</h3>
+                    <div class="project" techs="Next.js Express.js VectorDB">
+                        <h3>kiki</h3>
                         <div class="project-tags">
                             <span class="tag">Next.js</span>
                             <span class="tag">Express.js</span>
-                            <span class="tag">VectorDB</span>
+                            <span class="tag">Gatsby</span>
                         </div>
                         <p>Supercharge your learning with Scorelab, an AI-powered learning platform.</p>
                         <div class="live-preview">
-                            <iframe src="https://scorelab.ai" frameborder="0" scrolling="yes"></iframe>
+                            <iframe src="https://rohan-kiki.vercel.app" frameborder="0" scrolling="yes"></iframe>
                         </div>
                     </div>
 
