--- a/menu.html
+++ b/menu.html
@@ -35,10 +35,15 @@
               <span class="close-btn">&times;</span>
               <img src="IMG_4689.jpg" alt="Your Name" class="profile-picture">
               <div class="about-text">
-                <p>Based in [Your Location], I'm currently a software engineer at [Your Company].</p>
-                <p>[Add a brief description about your professional background]</p>
-                <p>[Add a paragraph about your personal interests or experiences]</p>
-                <p>[Add any other relevant information]</p>
+                <p>Hi, I'm Rohan Yogananda, a frontend engineer passionate about crafting intuitive and visually appealing web experiences. I enjoy blending design with functionality, focusing on creating user-centric interfaces. My approach to engineering is inspired by one of my favorite quotes from Rick Rubin:
+<br/>
+<br/>
+
+                    “I know nothing about music.” Legendary music producer Rick Rubin says he can barely play any instruments, but artists come to him because of “the confidence I have in my taste and my ability to express what I feel.”
+                    <br/><br/>
+                    Like Rubin, I believe in the power of taste, creativity, and the confidence to bring ideas to life.</p>
+                
+                
               </div>
             </div>
           </div>
