--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,8 @@
                     <li><button class="tech-btn">Three.js</button></li>
                     <li><button class="tech-btn">VectorDB</button></li>
                     <li><button class="tech-btn">WebGL</button></li>
+                    <li><button class="tech-btn">HTML</button></li>
+                    
                 </ul>
             </div>
 
@@ -37,13 +39,13 @@
 
                 <div id="project-list" class="project-showcase">
                     <div class="project" data-techs="Next.js Express.js VectorDB">
-                        <h3>Scorelab AI</h3>
+                        <h3>Easy Rent</h3>
                         <div class="project-tags">
-                            <span class="tag">Next.js</span>
-                            <span class="tag">Express.js</span>
-                            <span class="tag">VectorDB</span>
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">JavaScript</span>
                         </div>
-                        <p>Supercharge your learning with Scorelab, an AI-powered learning platform.</p>
+                        <p>Easy Rent is a stylish web platform for subletting in NYC, connecting property owners with trustworthy tenants.</p>
                         <div class="live-preview">
                             <iframe src="https://rohan-kiki.vercel.app" frameborder="0" scrolling="yes"></iframe>
                         </div>
