--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,7 @@
                     <li><button class="tech-btn">VectorDB</button></li>
                     <li><button class="tech-btn">WebGL</button></li>
                     <li><button class="tech-btn">HTML</button></li>
+                    <li><button class="tech-btn">Typescript</button></li>
                     
                 </ul>
             </div>
@@ -52,15 +53,15 @@
                     </div>
 
                     <div class="project" techs="Next.js Express.js VectorDB">
-                        <h3>kiki</h3>
+                        <h3>Product Page</h3>
                         <div class="project-tags">
                             <span class="tag">Next.js</span>
-                            <span class="tag">Express.js</span>
-                            <span class="tag">Gatsby</span>
+                            <span class="tag">Typescript</span>
+                            <span class="tag">CSS</span>
                         </div>
-                        <p>Supercharge your learning with Scorelab, an AI-powered learning platform.</p>
+                        <p>A sleek, responsive product page featuring an intuitive image gallery with custom navigation, and attention to user experience.</p>
                         <div class="live-preview">
-                            <iframe src="https://rohan-kiki.vercel.app" frameborder="0" scrolling="yes"></iframe>
+                            <iframe src="https://product-page-rohan.vercel.app/" frameborder="0" scrolling="yes"></iframe>
                         </div>
                     </div>
 
