--- a/projects.html
+++ b/projects.html
@@ -39,10 +39,10 @@
                 </div>
 
                 <div id="project-list" class="project-showcase">
-                    <div class="project" data-techs="Next.js Express.js VectorDB">
+                    <div class="project" data-techs="React JavaScript CSS">
                         <h3>Easy Rent</h3>
                         <div class="project-tags">
-                            <span class="tag">HTML</span>
+                            <span class="tag">React</span>
                             <span class="tag">CSS</span>
                             <span class="tag">JavaScript</span>
                         </div>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
 
-                    <div class="project" techs="Next.js Express.js VectorDB">
+                    <div class="project" techs="Next.js Typescript CSS">
                         <h3>Product Page</h3>
                         <div class="project-tags">
                             <span class="tag">Next.js</span>
@@ -62,6 +62,19 @@
                         <p>A sleek, responsive product page featuring an intuitive image gallery with custom navigation, and attention to user experience.</p>
                         <div class="live-preview">
                             <iframe src="https://product-page-rohan.vercel.app/" frameborder="0" scrolling="yes"></iframe>
+                        </div>
+                    </div>
+
+                    <div class="project" techs="Reac Typescript Three.js">
+                        <h3>Particle Experiment</h3>
+                        <div class="project-tags">
+                            <span class="tag">React</span>
+                            <span class="tag">Typescript</span>
+                            <span class="tag">Three.js</span>
+                        </div>
+                        <p>An interactive 3D particle animation forming an infinity symbol</p>
+                        <div class="live-preview">
+                            <iframe src="https://rohan-particle-experiment.vercel.app/" frameborder="0" scrolling="yes"></iframe>
                         </div>
                     </div>
 
